<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
            android:id="@+id/open_list_view"
            android:orderInCategory="1"
            android:showAsAction="always"
            android:icon="@drawable/list_icon"
            android:title="@string/open_list" />

    <item
            android:id="@+id/refresh_info"
            android:orderInCategory="100"
            android:icon="@drawable/refresh_icon"
            android:title="@string/refresh" />

    <item
            android:id="@+id/search"
            android:orderInCategory="100"
            android:icon="@drawable/search_icon"
            android:title="@string/search"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.support.v4.widget.SearchView"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
