<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of Krogkollen.
 Krogkollen is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 Krogkollen is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Krogkollen.  If not, see <http://www.gnu.org/licenses/>.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ededed">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/bg_card">

        <ScrollView
                android:id="@+id/scrollViewHelp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:requiresFadingEdge="vertical"
                android:overScrollMode="never">

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_marginTop="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#333333"/>

                <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_main"
                        android:textColor="#777777"/>

                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/help_icon_green"
                            android:contentDescription="@string/help_green">
                    </ImageView>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/help_green"
                            android:textColor="#777777"/>
                </LinearLayout>



                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/help_icon_yellow"
                            android:contentDescription="@string/help_yellow">
                    </ImageView>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/help_yellow"
                            android:textColor="#777777"/>
                </LinearLayout>



                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/help_icon_red"
                            android:contentDescription="@string/help_red">
                    </ImageView>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/help_red"
                            android:textColor="#777777"/>
                </LinearLayout>



                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/help_icon_gray"
                            android:contentDescription="@string/help_gray">
                    </ImageView>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/help_gray"
                            android:textColor="#777777"/>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</FrameLayout>